--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
 
 	%sapper.base%
 
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Mr+Dafoe&display=swap" rel="stylesheet">
 	<link rel='stylesheet' href='global.css'>
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
